--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,10 @@ name: deploy
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  repository_dispatch:
+    branches: [ main ]
+    types: [ blog_post ]
 
 jobs:
   web-deploy:
