--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           echo -e "API_KEY='${{ secrets.api_key }}'\n" >> .env
           npm run generate --if-present
           chmod +x ./.github/ftp_upload
-          which lftp || sudo apt-get update -y && sudo apt-get install lftp -y
+          which lftp || sudo apt update -y && sudo apt install lftp -y
 
       - name: 📂 Run ftp_upload
         run: |
